# PSS_University_Access_System

./: CMakeLists.txt  README.md  Room.cpp  Room.h  University.cpp  University.h  main.cpp
Users/: Admin.cpp  Admin.h  Guest.cpp  Guest.h  Person.cpp  Person.h  Professor.cpp  Professor.h  Student.cpp  Student.h  lab_employees.cpp  lab_employees.h
